horizontal scroll of new sidebar on main page on mobile devices fixed

--- a/src/index.styl
+++ b/src/index.styl
@@ -86,14 +86,16 @@ body
 .sidebar
   grid-area sidebar
   background #eaeaea
-  overflow-y auto
+  overflow-y scroll
   @media screen and (max-width 1024px)
     overflow hidden
-    overflow-x scroll
-    height initial
-    white-space nowrap
-    &__item
-      white-space normal
+  &__items-container
+    overflow-y auto
+    @media screen and (max-width 1024px)
+      overflow hidden
+      overflow-x scroll
+      height initial
+      white-space nowrap
   &__title
     padding 0
     margin 0
@@ -104,6 +106,8 @@ body
     position relative
     display inline-block
     padding 10px 20px
+    @media screen and (max-width 1024px)
+        white-space normal
     &:hover
       background #bababa
       cursor pointer
